fixed .meta duplication bug, status vertical-align bug

--- a/ui/sass/modules/_managelists.sass
+++ b/ui/sass/modules/_managelists.sass
@@ -105,7 +105,6 @@ nav
     +icon('.draft','ui/power.png',$blue-lighter,text)
     +icon('.active','ui/power.png',$green-light,text)
     +icon('.locked','ui/lock.png',$yellow,text)
-    vertical-align: top
     &.rejected, &.draft, &.active, &.locked
       width: 100%
 
